--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
   },
   "dependencies": {
     "@expo-google-fonts/lato": "^0.2.2",
+    "@react-navigation/native": "^6.0.10",
+    "@react-navigation/stack": "^6.2.1",
     "expo": "~44.0.0",
     "expo-font": "~10.0.5",
     "expo-status-bar": "~1.2.0",
