--- a/app.json
+++ b/app.json
@@ -6,7 +6,7 @@
     "orientation": "portrait",
     "icon": "./assets/img/icon.png",
     "splash": {
-      "image": "./assets/img/splash.png",
+      "image": "./assets/img/Fantastic_Four_logo.png",
       "resizeMode": "contain",
       "backgroundColor": "#ffffff"
     },
