--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "@expo-google-fonts/lato": "^0.2.2",
     "@react-navigation/native": "^6.0.10",
     "@react-navigation/stack": "^6.2.1",
+    "@rneui/base": "^4.0.0-rc.1",
+    "@rneui/themed": "^4.0.0-rc.1",
     "expo": "~44.0.0",
     "expo-font": "~10.0.5",
     "expo-status-bar": "~1.2.0",
